Network: Modified request object to build post request as json, and modified all middlewares accordingly